--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "recharts": "^2.10.3",
     "@supabase/supabase-js": "^2.39.0",
     "jspdf": "^2.5.1",
-    "jspdf-autotable": "^3.8.2",
-    "@google/genai": "^0.1.0"
+    "jspdf-autotable": "^3.8.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
